@startuml
hide empty members

' qualified name: "LionCore_M3"


class Annotation extends Classifier

abstract class Classifier extends LanguageEntity

class Concept extends Classifier {
  abstract: Boolean
  partition: Boolean
}

class Containment extends Link

abstract class DataType extends LanguageEntity

class Enumeration extends DataType

class EnumerationLiteral implements IKeyed

abstract class Feature implements IKeyed {
  optional: Boolean
}

interface IKeyed extends INamed {
  key: String
}

class Interface extends Classifier

class Language <<partition>> implements IKeyed {
  version: String
}

abstract class LanguageEntity implements IKeyed

abstract class Link extends Feature {
  multiple: Boolean
}

class PrimitiveType extends DataType

class Property extends Feature

class Reference extends Link



' relations:

Annotation "*" -- "0..1" Classifier: annotates
Annotation "*" -- "0..1" Annotation: extends
Annotation "*" -- "*" Interface: implements
Classifier "1" o-- "*" Feature: features
Concept "*" -- "0..1" Concept: extends
Concept "*" -- "*" Interface: implements


Enumeration "1" o-- "*" EnumerationLiteral: literals



Interface "*" -- "*" Interface: extends
Language "1" o-- "*" LanguageEntity: entities
Language "*" -- "*" Language: dependsOn

Link "*" -- "1" Classifier: type

Property "*" -- "1" DataType: type


@enduml
